--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "mongoose": "^6.2.9",
     "morgan": "~1.9.1",
     "next": "^12.1.5",
+    "nodemon": "^2.0.15",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
-  }
+    "react-dom": "^18.0.0",
+    "winston": "^3.7.2"
+  },
+  "type": "module"
 }
